--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 .app-container {
     height: 100vh !important;
-    /* width: 100vw !important; */
+    width: 100vw !important;
+    overflow-x: hidden;
 }
