--- a/src/app-main/app/style.css
+++ b/src/app-main/app/style.css
@@ -1,12 +1,6 @@
-#maintext.main-content {
-    height: 100%;
-    z-index: 1000;
-    margin-left: 70px;
-}
-
-#sidebar-menu .e-menu-wrapper ul .e-menu-item.e-menu-caret-icon {
-    width: 220px;
-}
+/* .e-main-content {
+    height: 100vh;
+} */
 
 #sidebar-menu .e-menu-wrapper ul .e-menu-item:hover .e-menu-item.e-focused:hover {
     background-color: #3e454c !important;
@@ -38,6 +32,7 @@
 #sidebar-menu.e-dock.e-close .main-menu-header,
 #sidebar-menu.e-dock.e-close .action-btn {
     display: none;
+    width: 100%;
 }
 
 #sidebar-menu.e-dock.e-close .e-menu-wrapper ul .e-menu-item.e-menu-caret-icon,
@@ -67,18 +62,6 @@
     overflow: hidden;
 }
 
-/* end of docksidebar styles */
-/*end of  Sidebar styles */
-
-/*button styles */
-#sidebar-menu .action-btn {
-    margin-left: 16px;
-    width: 165px;
-    height: 30px;
-    font-size: 13px;
-    border-radius: 5px;
-}
-
 #sidebar-menu .action-btn {
     background-color: #1784c7;
 }
@@ -99,14 +82,6 @@
 .sb-content-tab .center {
     display: block;
 }
-
-/* .ej2-new .sb-header,
-.ej2-new .sb-bread-crumb,
-.ej2-new #action-description,
-.ej2-new #description-section,
-.ej2-new #description {
-    display: none;
-} */
 
 .ej2-new .container-fluid,
 .ej2-new .container-fluid .control-section,
