--- a/src/hs-components/sf-sidebar/sidebar-menu.css
+++ b/src/hs-components/sf-sidebar/sidebar-menu.css
@@ -35,6 +35,8 @@
     margin-left: 70px;
     background-color: #33383e;
     color: #ffffff;
+    overflow-x: hidden;
+    margin: 3;
 }
 
 .sidebar-push {
@@ -47,4 +49,16 @@
 .close-btn:active,
 .close-btn:focus {
     background: #fafafa;
+}
+
+.test {
+    position: relative;
+    height: 100%;
+}
+
+.footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    margin: 5px;
 }
