--- a/src/hs-components/Layout/PageHeader/style.css
+++ b/src/hs-components/Layout/PageHeader/style.css
@@ -8,7 +8,9 @@
 
 .header-container {
     background-color: #282c34;
-    position: fixed;
+    /* position: fixed; */
+    top: 0;
     width: 100%;
-    z-index: 999;
+    z-index: 500;
 }
+
